--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "engines": {
     "node": ">=8.6.0",
-    "yarn": "1.3.2"
+    "yarn": ">=1.3.2"
   },
   "scripts": {
     "test": "test"
