--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@oyez/eslint-config-oyez",
-  "version": "0.2.1",
-  "description": "A shareable eslint config for oyez products",
+  "name": "eslint-config-edenspiekermann",
+  "version": "0.1.0",
+  "description": "A shareable eslint config for ESPI projects",
   "main": "index.js",
   "engines": {
     "node": ">=8.6.0",
-    "yarn": ">=1.3.2"
   },
   "scripts": {
     "test": "test"
@@ -15,11 +14,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lovelysystems/oyez-eslint-config.git"
+    "url": "git+https://github.com/edenspiekermann/espi-eslint-config.git"
   },
   "author": "",
   "license": "MIT",
-  "homepage": "https://github.com/lovelysystems/oyez-eslint-config",
+  "homepage": "https://github.com/edenspiekermann/espi-eslint-config",
   "dependencies": {
     "babel-eslint": "^8.2.2",
     "eslint-config-airbnb": "^16.1.0",
