--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "peerDependencies": {
     "eslint": ">= 4"
   },
+  "keywords": ["eslint", "eslint config", "prettier", "linting", "react"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/edenspiekermann/espi-eslint-config.git"
   },
-  "author": "",
+  "author": "EdenSpiekermann",
   "license": "MIT",
   "homepage": "https://github.com/edenspiekermann/espi-eslint-config",
   "dependencies": {
