--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-edenspiekermann",
+  "name": "@edenspiekermann/eslint-config",
   "version": "0.1.2",
   "description": "A shareable eslint config for ESPI projects",
   "main": "index.js",
