--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "eslint-config-edenspiekermann",
-  "version": "0.1.2",
+  "version": "0.1.3-beta.1",
   "description": "A shareable eslint config for ESPI projects",
   "main": "index.js",
   "engines": {
     "node": ">=8.6.0"
   },
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "release": "bump --commit \"Release v%s\" --tag --all"
   },
   "peerDependencies": {
     "eslint": ">= 4"
@@ -36,5 +37,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "prettier": "^1.11.1"
+  },
+  "devDependencies": {
+    "version-bump-prompt": "^5.0.5"
   }
 }
