--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "eslint": ">=6"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^2.5.0",
     "babel-eslint": "^10.0.3",
-    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.20.0",
