Add public access config to publish on npm

--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "np": {
     "tests": "npm run lint"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "eslint": ">=6"
   },
