--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edenspiekermann/eslint-config",
-  "version": "0.1.2",
+  "version": "1.0.0-0",
   "description": "A shareable eslint config for ESPI projects",
   "main": "index.js",
   "engines": {
