--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npm test"
+      "pre-push": "npm run test"
     }
   },
   "lint-staged": {
