--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": ">=7"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "babel-eslint": "^10.0.3",
     "eslint-config-airbnb": "^18.2.0",
@@ -66,6 +67,7 @@
     "jest": "^26.4.2",
     "lint-staged": "^10.4.0",
     "np": "^6.5.0",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "typescript": "^4.0.3"
   }
 }
