--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "lint-staged": "^10.4.0",
-    "np": "^6.5.0"
+    "np": "^6.5.0",
+    "react": "^16.13.1"
   }
 }
