--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "prettier": "^2.1.2"
   },
   "devDependencies": {
+    "@types/react": "^16.9.52",
     "eslint": "^7.10.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
