--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "eslint": ">=7"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.14.7",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
-    "babel-eslint": "^10.0.3",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^8.1.0",
@@ -62,7 +62,11 @@
     "prettier": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
     "@types/react": "^17.0.5",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.26.0",
     "husky": "^4.3.8",
     "jest": "^27.0.6",
